--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
       <!-- Loading indicator for better UX -->
       <div class="loader"></div>
     </div>
+    
+    <!-- GitHub Pages SPA redirect handler -->
+    <script>
+      (function(){
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+    </script>
+    
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
